Profilbild och header

--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois&display=swap" rel="stylesheet">
     <title>Jennie's portfolio</title>
 </head>
 <body>
     <header>
         <div class="container">
-        <h1>Jennies Hemsida</h1>
-        <img class="logo_pic" src="IMG_5136.jpg" width="80px" height="100px" alt="">
-        <nav>
-            <ul>
-                <li>Om mig</li>
-                <li>Karriär</li>
-            </ul>
+        <img class="logo_pic" src="bilder/selfieIBil.jpg" width="80px" height="100px" alt="">
+        <h1>Jennies Portfolio</h1>
+        <nav class="menu">
+            <a href="omMig.html">Om mig</a>
+            <a href="cv.html">CV</a>
         </nav>
         </div>
     </header>
@@ -25,5 +24,6 @@
     <footer>
 
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
