Text om projekt med Strong elementet och styling på headern

--- a/index.html
+++ b/index.html
@@ -19,7 +19,30 @@
         </div>
     </header>
     <main>
-
+        <div class="mainContainer">
+        <p>
+            Projekten som jag visar upp i min portfolio är <strong>mina första projekt 
+            utan hjälp av AI.</strong>  
+            De allra flesta projekt jag har på GitHub är med AIs hjälp. 
+            När jag började <strong>min utvecklarkarriär på EC-utbildning </strong>så 
+            var AI ganska ny och det kändes som att det kunde vara bra att veta hur man använder AI. 
+            Eftersom jag studerade hemifrån kunde jag få mycket hjälp av den och jag var 
+            mammaledig samtidigt så det var ett snabbare sätt att lära mig utveckling och också 
+            att få ihop projekten i tid. </p>
+        <p>
+            Jag tror på att AI kan hjälpa oss mycket i vårt jobb som utvecklare, 
+            men jag tror också på att man måste öva och <strong>lära sig utan AI</strong> för att få 
+            en bättre förståelse för hur koden är uppbyggd. 
+            Jag har lärt mig att <strong>jag lär mig fortare utan AI</strong> för att jag kommer ihåg 
+            mina misstag bättre. Jag tror att som ny utvecklare kan det bli förvirrande 
+            och man fastnar i en loop där man inte vet hur man ska ta sig ur problemet än. 
+        </p>
+        <p>
+            Just nu har jag bara två projekt att dela med mig av men jag vet att det kommer 
+            bli mer med tidens gång, portfolion som du är i just nu, är med hjälp av Jad Joubrans
+            HTML och CSS kurs där jag lär mig mycket om <strong>semantik och tillgänglighet.</strong> 
+        </p>
+        </div>
     </main>
     <footer>
 
