--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
         <div class="container">
         <img class="logo_pic" src="bilder/selfieIBil.jpg" width="80px" height="100px" alt="">
         <h1>Jennies Portfolio</h1>
-        <nav class="menu">
-            <a href="omMig.html">Om mig</a>
-            <a href="cv.html">CV</a>
-        </nav>
+        <div class="offscreenMenu">
+            <nav>
+            <ul>
+                <li><a href="omMig.html">Om mig</a></li>
+                <li><a href="cv.html">CV</a></li>
+            </ul>
+            </nav>
+        </div>
+        <div class="hamburgerMenu">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </header>
     <main>
