--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             utan hjälp av AI.</strong>  
             De allra flesta projekt jag har på GitHub är med AIs hjälp. 
             När jag började <strong>min utvecklarkarriär på EC-utbildning </strong>så 
-            var AI ganska ny och det kändes som att det kunde vara bra att veta hur man använder AI. 
+            var AI ganska nytt och det kändes som att det kunde vara bra att veta hur man använder AI. 
             Eftersom jag studerade hemifrån kunde jag få mycket hjälp av den och jag var 
             mammaledig samtidigt så det var ett snabbare sätt att lära mig utveckling och också 
             att få ihop projekten i tid. </p>
