--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div id="container">
         <img class="logo_pic" src="bilder/selfieIBil.jpg" width="80px" height="100px" alt="">
         <h1>Jennies Portfolio</h1>
         <div class="offscreenMenu">
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="omMig.html">Om mig</a></li>
                 <li><a href="cv.html">CV</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
             </nav>
         </div>
@@ -53,7 +54,7 @@
         </div>
     </main>
     <footer>
-
+       
     </footer>
     <script src="script.js"></script>
 </body>
